feat(backend): added org and roles name in GET /users
